----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-03-14 Robin Johnson  <robbat2@users.sourceforge.net>
    * config.inc.php3, libraries/config_import.lib.php3 tbl_change.php3:
        - Typo fixes:
        s/RestricColumnTypes/RestrictColumnTypes/
        s/RestricFunctions/RestrictFunctions/

2003-03-13 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_status.php3: Fixed the Garvin's calculations.
    * server_variables.php3: Fixed the display for MySQL <= 4.0.3-beta.
    * libraries/header_meta_style.inc.php3,
      libraries/transformations/overview.php3: Fixed CSS link.
    * tbl_properties.inc.php3: Added tooltips for transformations.

2003-03-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php3: analyzer: where_clause_identifiers

2003-03-13 Garvin Hicking <me@supergarv.de>
    * lang/*, server_status.php3: RFE #702485 - display total# queries per hour/minute/second.
    * config.inc.php3: Put a note for flipped headers: CSS only works for IE. ('writing-mode')
    * libraries/display_tbl.lib.php3: Display fields used for WHERE query highlighted in
      results page (1px border in the color of BrowserMarkerColor around the cells).
      RFE #638800
    * libraries/build_dump.lib.php3, db_details_structure.php3, db_printview.php3,
      pdf_schema.php3, tbl_dump.php3, tbl_printview.php3, tbl_properties_structure.php3,
      lang/*: RFE #7000385: Export AUTO_INCREMENT field.
      Display Create/Update/Check_time in PDF-Pages, printview, DB/Table structure and table
      dumps, if information is available (gathered by 'SHOW TABLE STATUS' for MySQL 3.23.XX).
    * config.inc.php3 - Altered comments for PMA_* tables for easier integration and more
      clarity. Make it easier to enable defaults (RFE #695265)

2003-03-12 Garvin Hicking <me@supergarv.de>
    * db_details_structure.php3: When using Alias-Displays for Tables, fix bug when a tablename